--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
     "firebase/php-jwt": "^6.2.0",
     "textalk/websocket": "^1.4.2",
     "khanamiryan/qrcode-detector-decoder": "^1.0.5.2",
-    "cboden/ratchet": "^0.4.4",
-    "aliyuncs/oss-sdk-php": "^2.5.0"
-    
+    "cboden/ratchet": "^0.4.4"
   },
   "autoload": {
     "psr-4": {
