--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
     "php": ">=7.1",
     "illuminate/routing": "10.x-dev",
     "illuminate/events": "10.x-dev",
-    "firebase/php-jwt": "^6.2.0",
+    "firebase/php-jwt": "dev-main",
     "textalk/websocket": "^1.4.2",
-    "khanamiryan/qrcode-detector-decoder": "^1.0.5.2",
-    "cboden/ratchet": "^0.4.4"
+    "khanamiryan/qrcode-detector-decoder": "dev-master",
+    "cboden/ratchet": "dev-master"
   },
   "autoload": {
     "psr-4": {
