--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "firebase/php-jwt": "dev-main",
     "textalk/websocket": "^1.4.2",
     "khanamiryan/qrcode-detector-decoder": "dev-master",
-    "cboden/ratchet": "dev-master"
+    "cboden/ratchet": "dev-master",
+    "mpdf/mpdf": "^8.0.17"
   },
   "autoload": {
     "psr-4": {
