--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,16 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "illuminate/routing": "10.x-dev",
-    "illuminate/events": "10.x-dev",
+    "php": ">=8.0",
+    "illuminate/routing": "9.x-dev",
+    "illuminate/events": "9.x-dev",
     "firebase/php-jwt": "dev-main",
     "textalk/websocket": "^1.4.2",
     "khanamiryan/qrcode-detector-decoder": "dev-master",
-    "cboden/ratchet": "dev-master",
-    "mpdf/mpdf": "^8.0.17"
+    "cboden/ratchet": "v0.4.4",
+    "mpdf/mpdf": "^8.0.13",
+    "milon/barcode": "dev-master",
+    "gregwar/captcha": "dev-master"
   },
   "autoload": {
     "psr-4": {
