--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "illuminate/events": "9.x-dev",
     "firebase/php-jwt": "dev-main",
     "textalk/websocket": "^1.4.2",
-    "khanamiryan/qrcode-detector-decoder": "dev-master",
+    "khanamiryan/qrcode-detector-decoder": "1.0.6",
     "cboden/ratchet": "v0.4.4",
     "mpdf/mpdf": "^8.0.13",
     "milon/barcode": "dev-master",
