--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
   ],
   "require": {
     "php": ">=8.0",
-    "illuminate/routing": "9.x-dev",
-    "illuminate/events": "9.x-dev",
+    "illuminate/routing": "10.x-dev",
+    "illuminate/events": "10.x-dev",
     "firebase/php-jwt": "dev-main",
     "textalk/websocket": "^1.4.2",
     "khanamiryan/qrcode-detector-decoder": "1.0.6",
@@ -21,7 +21,8 @@
     "milon/barcode": "dev-master",
     "gregwar/captcha": "dev-master",
     "phpmailer/phpmailer": "dev-master",
-    "aliyuncs/oss-sdk-php": "^2.7.1"
+    "aliyuncs/oss-sdk-php": "^2.7.1",
+    "mpdf/mpdf": "^8.1.0"
   },
   "autoload": {
     "psr-4": {
