--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
             "App\\Config\\": "app/config/",
             "App\\Config\\Langs\\": "app/config/langs/",
             "APP\\Library\\": "app/library/",
+            "APP\\Library\\Aliyun\\": "app/library/aliyun/",
             "App\\Model\\": "app/models/",
             "App\\Web\\": "app/modules/web/",
             "App\\Admin\\": "app/modules/admin/",
@@ -19,6 +20,10 @@
         "php": ">=7.4",
         "cboden/ratchet": "^0.4.4",
         "phrity/websocket": "^3.6",
-        "firebase/php-jwt": "^7.0"
+        "firebase/php-jwt": "^7.0",
+        "gregwar/captcha": "^1.3",
+        "mpdf/mpdf": "^8.2",
+        "phpmailer/phpmailer": "^7.0",
+        "khanamiryan/qrcode-detector-decoder": "^2.0"
     }
 }
