第三方类库

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
             "App\\": "app/",
             "App\\Config\\": "app/config/",
             "App\\Config\\Langs\\": "app/config/langs/",
-            "APP\\Library\\": "app/library/",
-            "APP\\Library\\Aliyun\\": "app/library/aliyun/",
+            "APP\\Librarys\\": "app/librarys/",
+            "APP\\Librarys\\Aliyun\\": "app/librarys/aliyun/",
             "App\\Model\\": "app/models/",
             "App\\Web\\": "app/modules/web/",
             "App\\Admin\\": "app/modules/admin/",
