--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "gregwar/captcha": "^1.3",
         "mpdf/mpdf": "^8.2",
         "phpmailer/phpmailer": "^7.0",
-        "khanamiryan/qrcode-detector-decoder": "^2.0"
+        "khanamiryan/qrcode-detector-decoder": "^2.0",
+        "milon/barcode": "^12.0"
     }
 }
